// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`arrange snapshots > Ballad in C > arpeggio advanced 1`] = `
"arpeggio.advanced.five-string | capo 5 | 4/4 | 90 bpm

   G                                                                D/F#
e |----------------3-------------------------------5---------------|----------------5-------------------------------2---------------|
B |------------0-------0-----------------------0-------0-----------|------------3-------3-----------------------3-------3-----------|
G |--------0---------------0---------------0---------------0-------|--------2---------------2---------------2---------------2-------|
D |----0-----------------------0---0---0-----------------------0---|----0-----------------------0---0---0-----------------------0---|
A |----------------------------------------------------------------|----------------------------------------------------------------|
E |3---------------------------------------------------------------|2---------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p

   Em                                                               Em
e |----------------3-------------------------------5---------------|----------------3-------------------------------5---------------|
B |------------0-------0-----------------------0-------0-----------|------------0-------0-----------------------0-------0-----------|
G |--------0---------------0---------------0---------------0-------|--------0---------------0---------------0---------------0-------|
D |----2-----------------------2---2---2-----------------------2---|----2-----------------------2---2---2-----------------------2---|
A |----------------------------------------------------------------|----------------------------------------------------------------|
E |0---------------------------------------------------------------|0---------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p

   C                                                                G/B
e |----------------3-------------------------------0---------------|----------------3-------------------------------5---------------|
B |------------1-------p0----------------------0-------h1----------|------------0-------0-----------------------0-------0-----------|
G |--------0---------------0---------------0---------------0-------|--------0---------------0---------------0---------------0-------|
D |----2-----------------------2---2---2-----------------------2---|----0-----------------------0---0---0-----------------------0---|
A |3---------------------------------------------------------------|2---------------------------------------------------------------|
E |----------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p

   Am7                                                              D
e |----------------3-------------------------------0---------------|----------------2-------------------------------5---------------|
B |------------1-------p0----------------------0-------h1----------|------------3-------3-----------------------3-------3-----------|
G |--------0---------------0---------------0---------------0-------|--------2---------------2---------------2---------------2-------|
D |----2-----------------------2---2---2-----------------------2---|0---------------------------------------------------------------|
A |0---------------------------------------------------------------|--------------------------------0-------------------------------|
E |----------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p       i   m   a   m   i       p       i   m   a   m   i

! slash-dropped: Playing Am/G without the separate bass note."
`;

exports[`arrange snapshots > Ballad in C > arpeggio basic 1`] = `
"arpeggio.basic.let-ring | capo 5 | 4/4 | 90 bpm

   G                                D/F#
e |------------3---------------3---|------------2---------------2---|
B |--------0---------------0-------|--------3---------------3-------|
G |----0---------------0-----------|----2---------------2-----------|
D |----------------0---------------|----------------0---------------|
A |--------------------------------|--------------------------------|
E |3-------------------------------|2-------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   Em                               Em
e |------------0---------------0---|------------0---------------0---|
B |--------0---------------0-------|--------0---------------0-------|
G |----0---------------0-----------|----0---------------0-----------|
D |----------------2---------------|----------------2---------------|
A |--------------------------------|--------------------------------|
E |0-------------------------------|0-------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   C                                G/B
e |------------0---------------0---|------------3---------------3---|
B |--------1---------------1-------|--------0---------------0-------|
G |----0---------------0-----------|----0---------------0-----------|
D |----------------2---------------|----------------0---------------|
A |3-------------------------------|2-------------------------------|
E |--------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   Am7                              D
e |------------0---------------0---|------------2---------------2---|
B |--------1---------------1-------|--------3---------------3-------|
G |----0---------------0-----------|----2---------------2-----------|
D |----------------2---------------|0-------------------------------|
A |0-------------------------------|----------------0---------------|
E |--------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

! slash-dropped: Playing Am/G without the separate bass note."
`;

exports[`arrange snapshots > Ballad in C > arpeggio moderate 1`] = `
"arpeggio.moderate.pinch-roll | capo 5 | 4/4 | 90 bpm

   G                                D/F#
e |3---------------5---------------|5---------------2---------------|
B |--------0---------------0-------|--------3---------------3-------|
G |----0---------------0-------h2--|----2---------------0-------h2--|
D |------------0---0---------------|------------0---0---------------|
A |--------------------------------|--------------------------------|
E |3-------------------------------|2-------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m   p   pa  i   m   i

   Em                               Em
e |3---------------5---------------|3---------------5---------------|
B |--------0---------------0-------|--------0---------------0-------|
G |----0---------------0-------h2--|----0---------------0-------h2--|
D |------------2---2---------------|------------2---2---------------|
A |--------------------------------|--------------------------------|
E |0-------------------------------|0-------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m   p   pa  i   m   i

   C                                G/B
e |3---------------0---------------|3---------------5---------------|
B |--------1---------------1-------|--------0---------------0-------|
G |----0---------------0-------h2--|----0---------------0-------h2--|
D |------------2---2---------------|------------0---0---------------|
A |3-------------------------------|2-------------------------------|
E |--------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m   p   pa  i   m   i

   Am7                              D
e |3---------------0---------------|2---------------5---------------|
B |--------1---------------1-------|--------3---------------3-------|
G |----0---------------0-------h2--|----2---------------0-------h2--|
D |------------2---2---------------|0-------------------------------|
A |0-------------------------------|----------------0---------------|
E |--------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m       pa  i   m   i

! slash-dropped: Playing Am/G without the separate bass note."
`;

exports[`arrange snapshots > Ballad in C > fingerstyle advanced 1`] = `
"fingerstyle.advanced.travis-hammer | capo 5 | 4/4 | 90 bpm

   G                                D/F#
e |3---------------5-----------<7>-|5---------------2-----------5---|
B |------------0-------------------|------------3-------------------|
G |----0---h2----------0---0-------|----0---h2----------2---p0------|
D |----------------0---------------|----------------0---------------|
A |--------------------------------|--------------------------------|
E |3-------S---------------S-------|2-------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   Em                               Em
e |3---------------5-----------<12>|3---------------5-----------<12>|
B |------------0-------------------|------------0-------------------|
G |----0---h2----------0---0-------|----0---h2----------0---0-------|
D |----------------2---------------|----------------2---------------|
A |--------------------------------|--------------------------------|
E |0-------S---------------S-------|0-------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   C                                G/B
e |3---------------0-----------<12>|3---------------5-----------<7>-|
B |------------1-------------------|------------0-------------------|
G |----0---h2----------0---0-------|----0---h2----------0---0-------|
D |----------------2---------------|----------------0---------------|
A |3-------------------------------|2-------------------------------|
E |--------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   Am7                              D
e |3---------------0-----------<12>|2---------------5-----------2---|
B |------------1-------------------|------------3-------------------|
G |----0---h2----------0---0-------|----0---h2----------2---p0------|
D |----------------2---------------|0-------------------------------|
A |0-------------------------------|----------------0---------------|
E |--------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

! slash-dropped: Playing Am/G without the separate bass note."
`;

exports[`arrange snapshots > Ballad in C > fingerstyle basic 1`] = `
"fingerstyle.basic.thumb-pluck | capo 5 | 4/4 | 90 bpm

   G                                D/F#
e |--------3---------------3-------|--------2---------------2-------|
B |--------0---------------0-------|--------3---------------3-------|
G |--------0---------------0-------|--------2---------------2-------|
D |--------------------------------|--------------------------------|
A |--------------------------------|--------------------------------|
E |3---------------3---------------|2---------------2---------------|
   p       ima     p       ima      p       ima     p       ima

   Em                               Em
e |--------0---------------0-------|--------0---------------0-------|
B |--------0---------------0-------|--------0---------------0-------|
G |--------0---------------0-------|--------0---------------0-------|
D |--------------------------------|--------------------------------|
A |--------------------------------|--------------------------------|
E |0---------------0---------------|0---------------0---------------|
   p       ima     p       ima      p       ima     p       ima

   C                                G/B
e |--------0---------------0-------|--------3---------------3-------|
B |--------1---------------1-------|--------0---------------0-------|
G |--------0---------------0-------|--------0---------------0-------|
D |--------------------------------|--------------------------------|
A |3---------------3---------------|2---------------2---------------|
E |--------------------------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

   Am7                              D
e |--------0---------------0-------|--------2---------------2-------|
B |--------1---------------1-------|--------3---------------3-------|
G |--------0---------------0-------|--------2---------------2-------|
D |--------------------------------|0---------------0---------------|
A |0---------------0---------------|--------------------------------|
E |--------------------------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

! slash-dropped: Playing Am/G without the separate bass note."
`;

exports[`arrange snapshots > Ballad in C > fingerstyle moderate 1`] = `
"fingerstyle.moderate.travis-pinch | capo 5 | 4/4 | 90 bpm

   G                                D/F#
e |3-----------5---3-----------5---|5-----------2---5-----------2---|
B |----0-------------------0-------|----3-------------------3-------|
G |--------0-------0---h2----------|--------2-------0---h2----------|
D |--------m0--------------m0------|--------m0--------------m0------|
A |--------------------------------|--------------------------------|
E |3---------------3---------------|2---------------2---------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   Em                               Em
e |3-----------5---3-----------5---|3-----------5---3-----------5---|
B |----0-------------------0-------|----0-------------------0-------|
G |--------0-------0---h2----------|--------0-------0---h2----------|
D |--------m2--------------m2------|--------m2--------------m2------|
A |--------------------------------|--------------------------------|
E |0---------------0---------------|0---------------0---------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   C                                G/B
e |3-----------0---3-----------0---|3-----------5---3-----------5---|
B |----1-------------------1-------|----0-------------------0-------|
G |--------0-------0---h2----------|--------0-------0---h2----------|
D |--------m2--------------m2------|--------m0--------------m0------|
A |3---------------3---------------|2---------------2---------------|
E |--------------------------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   Am7                              D
e |3-----------0---3-----------0---|2-----------5---2-----------5---|
B |----1-------------------1-------|----3-------------------3-------|
G |--------0-------0---h2----------|--------2-------0---h2----------|
D |--------m2--------------m2------|0---------------0---------------|
A |0---------------0---------------|--------m0--------------m0------|
E |--------------------------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

! slash-dropped: Playing Am/G without the separate bass note."
`;

exports[`arrange snapshots > Minor in Am > arpeggio advanced 1`] = `
"arpeggio.advanced.five-string | capo 5 | 4/4 | 90 bpm

   Em                                                               C
e |----------------0-------------------------------3---------------|----------------3-------------------------------0---------------|
B |------------0-------0-----------------------0-------0-----------|------------1-------p0----------------------0-------h1----------|
G |--------0---------------0---------------0---------------0-------|--------0---------------0---------------0---------------0-------|
D |----2-----------------------2---2---2-----------------------2---|----2-----------------------2---2---2-----------------------2---|
A |----------------------------------------------------------------|3---------------------------------------------------------------|
E |0---------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p

   G                                                                D
e |----------------3-------------------------------5---------------|----------------5-------------------------------2---------------|
B |------------0-------0-----------------------0-------0-----------|------------3-------3-----------------------3-------3-----------|
G |--------0---------------0---------------0---------------0-------|--------2---------------2---------------2---------------2-------|
D |----0-----------------------0---0---0-----------------------0---|0---------------------------------------------------------------|
A |----------------------------------------------------------------|--------------------------------0-------------------------------|
E |3---------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p       i   m   a   m   i       p       i   m   a   m   i

   Em                                                               Am
e |----------------3-------------------------------5---------------|----------------0-------------------------------2---------------|
B |------------0-------0-----------------------0-------0-----------|------------1-------p0----------------------0-------h1----------|
G |--------0---------------0---------------0---------------0-------|--------2---------------2---------------2---------------2-------|
D |----2-----------------------2---2---2-----------------------2---|----2-----------------------2---2---2-----------------------2---|
A |----------------------------------------------------------------|0---------------------------------------------------------------|
E |0---------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p

   B7                                                               Em
e |----------------2-------------------------------0---------------|----------------0-------------------------------3---------------|
B |------------0-------0-----------------------0-------0-----------|------------0-------0-----------------------0-------0-----------|
G |--------2---------------2---------------2---------------2-------|--------0---------------0---------------0---------------0-------|
D |----1-----------------------1---1---1-----------------------1---|----2-----------------------2---2---2-----------------------2---|
A |2---------------------------------------------------------------|----------------------------------------------------------------|
E |----------------------------------------------------------------|0---------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p"
`;

exports[`arrange snapshots > Minor in Am > arpeggio basic 1`] = `
"arpeggio.basic.let-ring | capo 5 | 4/4 | 90 bpm

   Em                               C
e |------------0---------------0---|------------0---------------0---|
B |--------0---------------0-------|--------1---------------1-------|
G |----0---------------0-----------|----0---------------0-----------|
D |----------------2---------------|----------------2---------------|
A |--------------------------------|3-------------------------------|
E |0-------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   G                                D
e |------------3---------------3---|------------2---------------2---|
B |--------0---------------0-------|--------3---------------3-------|
G |----0---------------0-----------|----2---------------2-----------|
D |----------------0---------------|0-------------------------------|
A |--------------------------------|----------------0---------------|
E |3-------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   Em                               Am
e |------------0---------------0---|------------0---------------0---|
B |--------0---------------0-------|--------1---------------1-------|
G |----0---------------0-----------|----2---------------2-----------|
D |----------------2---------------|----------------2---------------|
A |--------------------------------|0-------------------------------|
E |0-------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   B7                               Em
e |------------2---------------2---|------------0---------------0---|
B |--------0---------------0-------|--------0---------------0-------|
G |----2---------------2-----------|----0---------------0-----------|
D |----------------1---------------|----------------2---------------|
A |2-------------------------------|--------------------------------|
E |--------------------------------|0-------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a"
`;

exports[`arrange snapshots > Minor in Am > arpeggio moderate 1`] = `
"arpeggio.moderate.pinch-roll | capo 5 | 4/4 | 90 bpm

   Em                               C
e |0---------------3---------------|3---------------0---------------|
B |--------0---------------0-------|--------1---------------1-------|
G |----0---------------0-------h2--|----0---------------0-------h2--|
D |------------2---2---------------|------------2---2---------------|
A |--------------------------------|3-------------------------------|
E |0-------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m   p   pa  i   m   i

   G                                D
e |3---------------5---------------|5---------------2---------------|
B |--------0---------------0-------|--------3---------------3-------|
G |----0---------------0-------h2--|----2---------------0-------h2--|
D |------------0---0---------------|0-------------------------------|
A |--------------------------------|----------------0---------------|
E |3-------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m       pa  i   m   i

   Em                               Am
e |3---------------5---------------|0---------------2---------------|
B |--------0---------------0-------|--------1---------------1-------|
G |----0---------------0-------h2--|----2---------------0-------h2--|
D |------------2---2---------------|------------2---2---------------|
A |--------------------------------|0-------------------------------|
E |0-------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m   p   pa  i   m   i

   B7                               Em
e |2---------------0---------------|0---------------3---------------|
B |--------0---------------0-------|--------0---------------0-------|
G |----2---------------0-------h2--|----0---------------0-------h2--|
D |------------1---1---------------|------------2---2---------------|
A |2-------------------------------|--------------------------------|
E |--------------------------------|0-------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m   p   pa  i   m   i"
`;

exports[`arrange snapshots > Minor in Am > fingerstyle advanced 1`] = `
"fingerstyle.advanced.travis-hammer | capo 5 | 4/4 | 90 bpm

   Em                               C
e |0---------------3-----------<12>|3---------------0-----------<12>|
B |------------0-------------------|------------1-------------------|
G |----0---h2----------0---0-------|----0---h2----------0---0-------|
D |----------------2---------------|----------------2---------------|
A |--------------------------------|3-------------------------------|
E |0-------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   G                                D
e |3---------------5-----------<7>-|5---------------2-----------5---|
B |------------0-------------------|------------3-------------------|
G |----0---h2----------0---0-------|----0---h2----------2---p0------|
D |----------------0---------------|0-------------------------------|
A |--------------------------------|----------------0---------------|
E |3-------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   Em                               Am
e |3---------------5-----------<12>|0---------------2-----------<12>|
B |------------0-------------------|------------1-------------------|
G |----0---h2----------0---0-------|----0---h2----------2---p0------|
D |----------------2---------------|----------------2---------------|
A |--------------------------------|0-------------------------------|
E |0-------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   B7                               Em
e |2---------------0-----------<7>-|0---------------3-----------<12>|
B |------------0-------------------|------------0-------------------|
G |----0---h2----------2---p0------|----0---h2----------0---0-------|
D |----------------1---------------|----------------2---------------|
A |2-------------------------------|--------------------------------|
E |--------S---------------S-------|0-------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a"
`;

exports[`arrange snapshots > Minor in Am > fingerstyle basic 1`] = `
"fingerstyle.basic.thumb-pluck | capo 5 | 4/4 | 90 bpm

   Em                               C
e |--------0---------------0-------|--------0---------------0-------|
B |--------0---------------0-------|--------1---------------1-------|
G |--------0---------------0-------|--------0---------------0-------|
D |--------------------------------|--------------------------------|
A |--------------------------------|3---------------3---------------|
E |0---------------0---------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

   G                                D
e |--------3---------------3-------|--------2---------------2-------|
B |--------0---------------0-------|--------3---------------3-------|
G |--------0---------------0-------|--------2---------------2-------|
D |--------------------------------|0---------------0---------------|
A |--------------------------------|--------------------------------|
E |3---------------3---------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

   Em                               Am
e |--------0---------------0-------|--------0---------------0-------|
B |--------0---------------0-------|--------1---------------1-------|
G |--------0---------------0-------|--------2---------------2-------|
D |--------------------------------|--------------------------------|
A |--------------------------------|0---------------0---------------|
E |0---------------0---------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

   B7                               Em
e |--------2---------------2-------|--------0---------------0-------|
B |--------0---------------0-------|--------0---------------0-------|
G |--------2---------------2-------|--------0---------------0-------|
D |--------------------------------|--------------------------------|
A |2---------------2---------------|--------------------------------|
E |--------------------------------|0---------------0---------------|
   p       ima     p       ima      p       ima     p       ima"
`;

exports[`arrange snapshots > Minor in Am > fingerstyle moderate 1`] = `
"fingerstyle.moderate.travis-pinch | capo 5 | 4/4 | 90 bpm

   Em                               C
e |0-----------3---0-----------3---|3-----------0---3-----------0---|
B |----0-------------------0-------|----1-------------------1-------|
G |--------0-------0---h2----------|--------0-------0---h2----------|
D |--------m2--------------m2------|--------m2--------------m2------|
A |--------------------------------|3---------------3---------------|
E |0---------------0---------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   G                                D
e |3-----------5---3-----------5---|5-----------2---5-----------2---|
B |----0-------------------0-------|----3-------------------3-------|
G |--------0-------0---h2----------|--------2-------0---h2----------|
D |--------m0--------------m0------|0---------------0---------------|
A |--------------------------------|--------m0--------------m0------|
E |3---------------3---------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   Em                               Am
e |3-----------5---3-----------5---|0-----------2---0-----------2---|
B |----0-------------------0-------|----1-------------------1-------|
G |--------0-------0---h2----------|--------2-------0---h2----------|
D |--------m2--------------m2------|--------m2--------------m2------|
A |--------------------------------|0---------------0---------------|
E |0---------------0---------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   B7                               Em
e |2-----------0---2-----------0---|0-----------3---0-----------3---|
B |----0-------------------0-------|----0-------------------0-------|
G |--------2-------0---h2----------|--------0-------0---h2----------|
D |--------m1--------------m1------|--------m2--------------m2------|
A |2---------------2---------------|--------------------------------|
E |--------------------------------|0---------------0---------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a"
`;

exports[`arrange snapshots > Pop loop in G > arpeggio advanced 1`] = `
"arpeggio.advanced.five-string | capo 0 | 4/4 | 90 bpm

   G                                                                D
e |----------------3-------------------------------5---------------|----------------5-------------------------------2---------------|
B |------------0-------0-----------------------0-------0-----------|------------3-------3-----------------------3-------3-----------|
G |--------0---------------0---------------0---------------0-------|--------2---------------2---------------2---------------2-------|
D |----0-----------------------0---0---0-----------------------0---|0---------------------------------------------------------------|
A |----------------------------------------------------------------|--------------------------------0-------------------------------|
E |3---------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p       i   m   a   m   i       p       i   m   a   m   i

   Em                                                               C
e |----------------3-------------------------------5---------------|----------------3-------------------------------0---------------|
B |------------0-------0-----------------------0-------0-----------|------------1-------p0----------------------0-------h1----------|
G |--------0---------------0---------------0---------------0-------|--------0---------------0---------------0---------------0-------|
D |----2-----------------------2---2---2-----------------------2---|----2-----------------------2---2---2-----------------------2---|
A |----------------------------------------------------------------|3---------------------------------------------------------------|
E |0---------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p

   G                                                                D
e |----------------3-------------------------------5---------------|----------------5-------------------------------2---------------|
B |------------0-------0-----------------------0-------0-----------|------------3-------3-----------------------3-------3-----------|
G |--------0---------------0---------------0---------------0-------|--------2---------------2---------------2---------------2-------|
D |----0-----------------------0---0---0-----------------------0---|0---------------------------------------------------------------|
A |----------------------------------------------------------------|--------------------------------0-------------------------------|
E |3---------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p       i   m   a   m   i       p       i   m   a   m   i

   C                                                                C
e |----------------3-------------------------------0---------------|----------------0-------------------------------3---------------|
B |------------1-------p0----------------------0-------h1----------|------------1-------p0----------------------0-------h1----------|
G |--------0---------------0---------------0---------------0-------|--------0---------------0---------------0---------------0-------|
D |----2-----------------------2---2---2-----------------------2---|----2-----------------------2---2---2-----------------------2---|
A |3---------------------------------------------------------------|3---------------------------------------------------------------|
E |----------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p"
`;

exports[`arrange snapshots > Pop loop in G > arpeggio basic 1`] = `
"arpeggio.basic.let-ring | capo 0 | 4/4 | 90 bpm

   G                                D
e |------------3---------------3---|------------2---------------2---|
B |--------0---------------0-------|--------3---------------3-------|
G |----0---------------0-----------|----2---------------2-----------|
D |----------------0---------------|0-------------------------------|
A |--------------------------------|----------------0---------------|
E |3-------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   Em                               C
e |------------0---------------0---|------------0---------------0---|
B |--------0---------------0-------|--------1---------------1-------|
G |----0---------------0-----------|----0---------------0-----------|
D |----------------2---------------|----------------2---------------|
A |--------------------------------|3-------------------------------|
E |0-------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   G                                D
e |------------3---------------3---|------------2---------------2---|
B |--------0---------------0-------|--------3---------------3-------|
G |----0---------------0-----------|----2---------------2-----------|
D |----------------0---------------|0-------------------------------|
A |--------------------------------|----------------0---------------|
E |3-------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   C                                C
e |------------0---------------0---|------------0---------------0---|
B |--------1---------------1-------|--------1---------------1-------|
G |----0---------------0-----------|----0---------------0-----------|
D |----------------2---------------|----------------2---------------|
A |3-------------------------------|3-------------------------------|
E |--------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a"
`;

exports[`arrange snapshots > Pop loop in G > arpeggio moderate 1`] = `
"arpeggio.moderate.pinch-roll | capo 0 | 4/4 | 90 bpm

   G                                D
e |3---------------5---------------|5---------------2---------------|
B |--------0---------------0-------|--------3---------------3-------|
G |----0---------------0-------h2--|----2---------------0-------h2--|
D |------------0---0---------------|0-------------------------------|
A |--------------------------------|----------------0---------------|
E |3-------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m       pa  i   m   i

   Em                               C
e |3---------------5---------------|3---------------0---------------|
B |--------0---------------0-------|--------1---------------1-------|
G |----0---------------0-------h2--|----0---------------0-------h2--|
D |------------2---2---------------|------------2---2---------------|
A |--------------------------------|3-------------------------------|
E |0-------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m   p   pa  i   m   i

   G                                D
e |3---------------5---------------|5---------------2---------------|
B |--------0---------------0-------|--------3---------------3-------|
G |----0---------------0-------h2--|----2---------------0-------h2--|
D |------------0---0---------------|0-------------------------------|
A |--------------------------------|----------------0---------------|
E |3-------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m       pa  i   m   i

   C                                C
e |3---------------0---------------|0---------------3---------------|
B |--------1---------------1-------|--------1---------------1-------|
G |----0---------------0-------h2--|----0---------------0-------h2--|
D |------------2---2---------------|------------2---2---------------|
A |3-------------------------------|3-------------------------------|
E |--------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m   p   pa  i   m   i"
`;

exports[`arrange snapshots > Pop loop in G > fingerstyle advanced 1`] = `
"fingerstyle.advanced.travis-hammer | capo 0 | 4/4 | 90 bpm

   G                                D
e |3---------------5-----------<7>-|5---------------2-----------5---|
B |------------0-------------------|------------3-------------------|
G |----0---h2----------0---0-------|----0---h2----------2---2-------|
D |----------------0---------------|0-------------------------------|
A |--------------------------------|----------------0---------------|
E |3-------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   Em                               C
e |3---------------5-----------<12>|3---------------0-----------<12>|
B |------------0-------------------|------------1-------------------|
G |----0---h2----------0---0-------|----0---h2----------0---0-------|
D |----------------2---------------|----------------2---------------|
A |--------------------------------|3-------------------------------|
E |0-------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   G                                D
e |3---------------5-----------<7>-|5---------------2-----------5---|
B |------------0-------------------|------------3-------------------|
G |----0---h2----------0---0-------|----0---h2----------2---2-------|
D |----------------0---------------|0-------------------------------|
A |--------------------------------|----------------0---------------|
E |3-------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   C                                C
e |3---------------0-----------<12>|0---------------3-----------<12>|
B |------------1-------------------|------------1-------------------|
G |----0---h2----------0---0-------|----0---h2----------0---0-------|
D |----------------2---------------|----------------2---------------|
A |3-------------------------------|3-------------------------------|
E |--------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a"
`;

exports[`arrange snapshots > Pop loop in G > fingerstyle basic 1`] = `
"fingerstyle.basic.thumb-pluck | capo 0 | 4/4 | 90 bpm

   G                                D
e |--------3---------------3-------|--------2---------------2-------|
B |--------0---------------0-------|--------3---------------3-------|
G |--------0---------------0-------|--------2---------------2-------|
D |--------------------------------|0---------------0---------------|
A |--------------------------------|--------------------------------|
E |3---------------3---------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

   Em                               C
e |--------0---------------0-------|--------0---------------0-------|
B |--------0---------------0-------|--------1---------------1-------|
G |--------0---------------0-------|--------0---------------0-------|
D |--------------------------------|--------------------------------|
A |--------------------------------|3---------------3---------------|
E |0---------------0---------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

   G                                D
e |--------3---------------3-------|--------2---------------2-------|
B |--------0---------------0-------|--------3---------------3-------|
G |--------0---------------0-------|--------2---------------2-------|
D |--------------------------------|0---------------0---------------|
A |--------------------------------|--------------------------------|
E |3---------------3---------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

   C                                C
e |--------0---------------0-------|--------0---------------0-------|
B |--------1---------------1-------|--------1---------------1-------|
G |--------0---------------0-------|--------0---------------0-------|
D |--------------------------------|--------------------------------|
A |3---------------3---------------|3---------------3---------------|
E |--------------------------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima"
`;

exports[`arrange snapshots > Pop loop in G > fingerstyle moderate 1`] = `
"fingerstyle.moderate.travis-pinch | capo 0 | 4/4 | 90 bpm

   G                                D
e |3-----------5---3-----------5---|5-----------2---5-----------2---|
B |----0-------------------0-------|----3-------------------3-------|
G |--------0-------0---h2----------|--------2-------0---h2----------|
D |--------m0--------------m0------|0---------------0---------------|
A |--------------------------------|--------m0--------------m0------|
E |3---------------3---------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   Em                               C
e |3-----------5---3-----------5---|3-----------0---3-----------0---|
B |----0-------------------0-------|----1-------------------1-------|
G |--------0-------0---h2----------|--------0-------0---h2----------|
D |--------m2--------------m2------|--------m2--------------m2------|
A |--------------------------------|3---------------3---------------|
E |0---------------0---------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   G                                D
e |3-----------5---3-----------5---|5-----------2---5-----------2---|
B |----0-------------------0-------|----3-------------------3-------|
G |--------0-------0---h2----------|--------2-------0---h2----------|
D |--------m0--------------m0------|0---------------0---------------|
A |--------------------------------|--------m0--------------m0------|
E |3---------------3---------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   C                                C
e |3-----------0---3-----------0---|0-----------3---0-----------3---|
B |----1-------------------1-------|----1-------------------1-------|
G |--------0-------0---h2----------|--------0-------0---h2----------|
D |--------m2--------------m2------|--------m2--------------m2------|
A |3---------------3---------------|3---------------3---------------|
E |--------------------------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a"
`;

exports[`arrange snapshots > Sharp key (F#) > arpeggio advanced 1`] = `
"arpeggio.advanced.five-string | capo 4 | 4/4 | 90 bpm

   D                                                                Bm
e |----------------2-------------------------------5---------------|----------------2-------------------------------2---------------|
B |------------3-------3-----------------------3-------3-----------|------------3-------p2----------------------2-------h3----------|
G |--------2---------------2---------------2---------------2-------|--------4---------------4---------------4---------------4-------|
D |0---------------------------------------------------------------|----4-----------------------4---4---4-----------------------4---|
A |--------------------------------0-------------------------------|2---------------------------------------------------------------|
E |----------------------------------------------------------------|----------------------------------------------------------------|
   p       i   m   a   m   i       p       i   m   a   m   i        p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p

   G                                                                A
e |----------------3-------------------------------1---------------|----------------0-------------------------------5---------------|
B |------------0-------0-----------------------0-------0-----------|------------2-------2-----------------------0-------h2----------|
G |--------0---------------0---------------0---------------0-------|--------2---------------2---------------2---------------2-------|
D |----0-----------------------0---0---0-----------------------0---|----2-----------------------2---2---2-----------------------2---|
A |----------------------------------------------------------------|0---------------------------------------------------------------|
E |3---------------------------------------------------------------|----------------------------------------------------------------|
   p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p    p   p   i   m   a   m   i   p   p   p   i   m   a   m   i   p

! barre: Bm needs a barre at this capo position."
`;

exports[`arrange snapshots > Sharp key (F#) > arpeggio basic 1`] = `
"arpeggio.basic.let-ring | capo 4 | 4/4 | 90 bpm

   D                                Bm7
e |------------2---------------2---|------------2---------------2---|
B |--------3---------------3-------|--------0---------------0-------|
G |----2---------------2-----------|----2---------------2-----------|
D |0-------------------------------|----------------0---------------|
A |----------------0---------------|2-------------------------------|
E |--------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

   G                                A
e |------------3---------------3---|------------0---------------0---|
B |--------0---------------0-------|--------2---------------2-------|
G |----0---------------0-----------|----2---------------2-----------|
D |----------------0---------------|----------------2---------------|
A |--------------------------------|0-------------------------------|
E |3-------------------------------|--------------------------------|
   p   i   m   a   p   i   m   a    p   i   m   a   p   i   m   a

! simplified: Swapped Bm for Bm7 so you can skip the barre."
`;

exports[`arrange snapshots > Sharp key (F#) > arpeggio moderate 1`] = `
"arpeggio.moderate.pinch-roll | capo 4 | 4/4 | 90 bpm

   D                                Bm
e |2---------------5---------------|2---------------2---------------|
B |--------3---------------3-------|--------3---------------3-------|
G |----2---------------0-------h2--|----4---------------2-------h4--|
D |0-------------------------------|------------4---4---------------|
A |----------------0---------------|2-------------------------------|
E |--------------------------------|--------------------------------|
   pa  i   m       pa  i   m   i    pa  i   m   p   pa  i   m   i

   G                                A
e |3---------------1---------------|0---------------5---------------|
B |--------0---------------0-------|--------2---------------2-------|
G |----0---------------0-------0---|----2---------------0-------h2--|
D |------------0---0---------------|------------2---2---------------|
A |--------------------------------|0-------------------------------|
E |3-------------------------------|--------------------------------|
   pa  i   m   p   pa  i   m   i    pa  i   m   p   pa  i   m   i

! barre: Bm needs a barre at this capo position."
`;

exports[`arrange snapshots > Sharp key (F#) > fingerstyle advanced 1`] = `
"fingerstyle.advanced.travis-hammer | capo 4 | 4/4 | 90 bpm

   D                                Bm
e |2---------------5-----------2---|2---------------2-----------<7>-|
B |------------3-------------------|------------3-------------------|
G |----0---h2----------2---2-------|----2---h4----------4---p2------|
D |0-------------------------------|----------------4---------------|
A |----------------0---------------|2-------------------------------|
E |--------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

   G                                A
e |3---------------1-----------<7>-|0---------------5-----------<12>|
B |------------0-------------------|------------2-------------------|
G |----0---0-----------0---0-------|----0---h2----------2---p0------|
D |----------------0---------------|----------------2---------------|
A |--------------------------------|0-------------------------------|
E |3-------S---------------S-------|--------S---------------S-------|
   pm  i   pi  m   pm  i   pi  a    pm  i   pi  m   pm  i   pi  a

! barre: Bm needs a barre at this capo position."
`;

exports[`arrange snapshots > Sharp key (F#) > fingerstyle basic 1`] = `
"fingerstyle.basic.thumb-pluck | capo 4 | 4/4 | 90 bpm

   D                                Bm7
e |--------2---------------2-------|--------2---------------2-------|
B |--------3---------------3-------|--------0---------------0-------|
G |--------2---------------2-------|--------2---------------2-------|
D |0---------------0---------------|--------------------------------|
A |--------------------------------|2---------------2---------------|
E |--------------------------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

   G                                A
e |--------3---------------3-------|--------0---------------0-------|
B |--------0---------------0-------|--------2---------------2-------|
G |--------0---------------0-------|--------2---------------2-------|
D |--------------------------------|--------------------------------|
A |--------------------------------|0---------------0---------------|
E |3---------------3---------------|--------------------------------|
   p       ima     p       ima      p       ima     p       ima

! simplified: Swapped Bm for Bm7 so you can skip the barre."
`;

exports[`arrange snapshots > Sharp key (F#) > fingerstyle moderate 1`] = `
"fingerstyle.moderate.travis-pinch | capo 4 | 4/4 | 90 bpm

   D                                Bm
e |2-----------5---2-----------5---|2-----------2---2-----------2---|
B |----3-------------------3-------|----3-------------------3-------|
G |--------2-------0---h2----------|--------4-------2---h4----------|
D |0---------------0---------------|--------m4--------------m4------|
A |--------m0--------------m0------|2---------------2---------------|
E |--------------------------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

   G                                A
e |3-----------1---3-----------1---|0-----------5---0-----------5---|
B |----0-------------------0-------|----2-------------------2-------|
G |--------0-------0---0-----------|--------2-------0---h2----------|
D |--------m0--------------m0------|--------m2--------------m2------|
A |--------------------------------|0---------------0---------------|
E |3---------------3---------------|--------------------------------|
   pm  i   pi  m   pia i   pm  a    pm  i   pi  m   pia i   pm  a

! barre: Bm needs a barre at this capo position."
`;

exports[`arrange snapshots > Waltz in D > arpeggio advanced 1`] = `
"arpeggio.advanced.five-string | capo 7 | 3/4 | 90 bpm

   G                                                G
e |----------------3-----------------------5-------|----------------3-----------------------5-------|
B |------------0-------0---------------0-------0---|------------0-------0---------------0-------0---|
G |--------0-----------------------0---------------|--------0-----------------------0---------------|
D |----0-------------------0---0-------------------|----0-------------------0---0-------------------|
A |------------------------------------------------|------------------------------------------------|
E |3-----------------------------------------------|3-----------------------------------------------|
   p   p   i   m   a   m   p   p   i   m   a   m    p   p   i   m   a   m   p   p   i   m   a   m

   C                                                D7
e |----------------3-----------------------0-------|----------------2-----------------------0-------|
B |------------1-------1---------------1-------1---|------------1-------1---------------1-------1---|
G |--------0-----------------------0---------------|--------2-----------------------2---------------|
D |----2-------------------2---2-------------------|0-----------------------------------------------|
A |3-----------------------------------------------|------------------------0-----------------------|
E |------------------------------------------------|------------------------------------------------|
   p   p   i   m   a   m   p   p   i   m   a   m    p       i   m   a   m   p       i   m   a   m

   G                                                Em
e |----------------3-----------------------5-------|----------------3-----------------------5-------|
B |------------0-------0---------------0-------0---|------------0-------0---------------0-------0---|
G |--------0-----------------------0---------------|--------0-----------------------0---------------|
D |----0-------------------0---0-------------------|----2-------------------2---2-------------------|
A |------------------------------------------------|------------------------------------------------|
E |3-----------------------------------------------|0-----------------------------------------------|
   p   p   i   m   a   m   p   p   i   m   a   m    p   p   i   m   a   m   p   p   i   m   a   m

   Am7                                              D7
e |----------------3-----------------------0-------|----------------2-----------------------0-------|
B |------------1-------1---------------1-------1---|------------1-------1---------------1-------1---|
G |--------0-----------------------0---------------|--------2-----------------------2---------------|
D |----2-------------------2---2-------------------|0-----------------------------------------------|
A |0-----------------------------------------------|------------------------0-----------------------|
E |------------------------------------------------|------------------------------------------------|
   p   p   i   m   a   m   p   p   i   m   a   m    p       i   m   a   m   p       i   m   a   m"
`;

exports[`arrange snapshots > Waltz in D > arpeggio basic 1`] = `
"arpeggio.basic.let-ring | capo 7 | 3/4 | 90 bpm

   G                        G
e |------------3-----------|------------3-----------|
B |--------0-----------0---|--------0-----------0---|
G |----0-------------------|----0-------------------|
D |----------------0-------|----------------0-------|
A |------------------------|------------------------|
E |3-----------------------|3-----------------------|
   p   i   m   a   p   m    p   i   m   a   p   m

   C                        D7
e |------------0-----------|------------2-----------|
B |--------1-----------1---|--------1-----------1---|
G |----0-------------------|----2-------------------|
D |----------------2-------|0-----------------------|
A |3-----------------------|----------------0-------|
E |------------------------|------------------------|
   p   i   m   a   p   m    p   i   m   a   p   m

   G                        Em
e |------------3-----------|------------0-----------|
B |--------0-----------0---|--------0-----------0---|
G |----0-------------------|----0-------------------|
D |----------------0-------|----------------2-------|
A |------------------------|------------------------|
E |3-----------------------|0-----------------------|
   p   i   m   a   p   m    p   i   m   a   p   m

   Am7                      D7
e |------------0-----------|------------2-----------|
B |--------1-----------1---|--------1-----------1---|
G |----0-------------------|----2-------------------|
D |----------------2-------|0-----------------------|
A |0-----------------------|----------------0-------|
E |------------------------|------------------------|
   p   i   m   a   p   m    p   i   m   a   p   m"
`;

exports[`arrange snapshots > Waltz in D > arpeggio moderate 1`] = `
"arpeggio.moderate.pinch-roll | capo 7 | 3/4 | 90 bpm

   G                        G
e |3-----------------------|3-----------------------|
B |--------0---------------|--------0---------------|
G |----0---------------0---|----0---------------0---|
D |------------0---0-------|------------0---0-------|
A |------------------------|------------------------|
E |3-----------------------|3-----------------------|
   pa  i   m   p   p   i    pa  i   m   p   p   i

   C                        D7
e |3-----------------------|2-----------------------|
B |--------1---------------|--------1---------------|
G |----0---------------0---|----2---------------2---|
D |------------2---2-------|0-----------------------|
A |3-----------------------|----------------0-------|
E |------------------------|------------------------|
   pa  i   m   p   p   i    pa  i   m       p   i

   G                        Em
e |3-----------------------|3-----------------------|
B |--------0---------------|--------0---------------|
G |----0---------------0---|----0---------------0---|
D |------------0---0-------|------------2---2-------|
A |------------------------|------------------------|
E |3-----------------------|0-----------------------|
   pa  i   m   p   p   i    pa  i   m   p   p   i

   Am7                      D7
e |3-----------------------|2-----------------------|
B |--------1---------------|--------1---------------|
G |----0---------------0---|----2---------------2---|
D |------------2---2-------|0-----------------------|
A |0-----------------------|----------------0-------|
E |------------------------|------------------------|
   pa  i   m   p   p   i    pa  i   m       p   i"
`;

exports[`arrange snapshots > Waltz in D > fingerstyle advanced 1`] = `
"fingerstyle.advanced.travis-hammer | capo 7 | 3/4 | 90 bpm

   G                        G
e |3-------------------<7>-|3-------------------<7>-|
B |------------0-----------|------------0-----------|
G |----0---h2------0-------|----0---h2------0-------|
D |----------------m0------|----------------m0------|
A |------------------------|------------------------|
E |3-------S---------------|3-------S---------------|
   pm  i   pi  m   pi  a    pm  i   pi  m   pi  a

   C                        D7
e |3-------------------<12>|2-------------------0---|
B |------------1-----------|------------1-----------|
G |----0---h2------0-------|----0---h2------2-------|
D |----------------m2------|0-----------------------|
A |3-----------------------|----------------m0------|
E |--------S---------------|--------S---------------|
   pm  i   pi  m   pi  a    pm  i   pi  m   pi  a

   G                        Em
e |3-------------------<7>-|3-------------------<12>|
B |------------0-----------|------------0-----------|
G |----0---h2------0-------|----0---h2------0-------|
D |----------------m0------|----------------m2------|
A |------------------------|------------------------|
E |3-------S---------------|0-------S---------------|
   pm  i   pi  m   pi  a    pm  i   pi  m   pi  a

   Am7                      D7
e |3-------------------<12>|2-------------------0---|
B |------------1-----------|------------1-----------|
G |----0---h2------0-------|----0---h2------2-------|
D |----------------m2------|0-----------------------|
A |0-----------------------|----------------m0------|
E |--------S---------------|--------S---------------|
   pm  i   pi  m   pi  a    pm  i   pi  m   pi  a"
`;

exports[`arrange snapshots > Waltz in D > fingerstyle basic 1`] = `
"fingerstyle.basic.thumb-pluck | capo 7 | 3/4 | 90 bpm

   G                        G
e |--------3-------3-------|--------3-------3-------|
B |--------0-------0-------|--------0-------0-------|
G |--------0-------0-------|--------0-------0-------|
D |------------------------|------------------------|
A |------------------------|------------------------|
E |3-----------------------|3-----------------------|
   p       ima     ima      p       ima     ima

   C                        D7
e |--------0-------0-------|--------2-------2-------|
B |--------1-------1-------|--------1-------1-------|
G |--------0-------0-------|--------2-------2-------|
D |------------------------|0-----------------------|
A |3-----------------------|------------------------|
E |------------------------|------------------------|
   p       ima     ima      p       ima     ima

   G                        Em
e |--------3-------3-------|--------0-------0-------|
B |--------0-------0-------|--------0-------0-------|
G |--------0-------0-------|--------0-------0-------|
D |------------------------|------------------------|
A |------------------------|------------------------|
E |3-----------------------|0-----------------------|
   p       ima     ima      p       ima     ima

   Am7                      D7
e |--------0-------0-------|--------2-------2-------|
B |--------1-------1-------|--------1-------1-------|
G |--------0-------0-------|--------2-------2-------|
D |------------------------|0-----------------------|
A |0-----------------------|------------------------|
E |------------------------|------------------------|
   p       ima     ima      p       ima     ima"
`;

exports[`arrange snapshots > Waltz in D > fingerstyle moderate 1`] = `
"fingerstyle.moderate.travis-pinch | capo 7 | 3/4 | 90 bpm

   G                        G
e |3-----------5---3-------|3-----------5---3-------|
B |----0-------------------|----0-------------------|
G |--------0-------0---h2--|--------0-------0---h2--|
D |--------m0--------------|--------m0--------------|
A |------------------------|------------------------|
E |3---------------3-------|3---------------3-------|
   pm  i   pi  m   pia i    pm  i   pi  m   pia i

   C                        D7
e |3-----------0---3-------|2-----------0---2-------|
B |----1-------------------|----1-------------------|
G |--------0-------0---h2--|--------2-------0---h2--|
D |--------m2--------------|0---------------0-------|
A |3---------------3-------|--------m0--------------|
E |------------------------|------------------------|
   pm  i   pi  m   pia i    pm  i   pi  m   pia i

   G                        Em
e |3-----------5---3-------|3-----------5---3-------|
B |----0-------------------|----0-------------------|
G |--------0-------0---h2--|--------0-------0---h2--|
D |--------m0--------------|--------m2--------------|
A |------------------------|------------------------|
E |3---------------3-------|0---------------0-------|
   pm  i   pi  m   pia i    pm  i   pi  m   pia i

   Am7                      D7
e |3-----------0---3-------|2-----------0---2-------|
B |----1-------------------|----1-------------------|
G |--------0-------0---h2--|--------2-------0---h2--|
D |--------m2--------------|0---------------0-------|
A |0---------------0-------|--------m0--------------|
E |------------------------|------------------------|
   pm  i   pi  m   pia i    pm  i   pi  m   pia i"
`;
